--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^17.0.1",
+    "express": "^5.1.0",
     "firebase-admin": "^13.4.0",
     "node-cron": "^4.2.0",
     "nodemailer": "^7.0.4"
